--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -11,6 +11,9 @@
   height: 100vh;
   box-sizing: border-box;
   will-change: transform;
+  margin-bottom: 500px;
+  position: relative;
+  z-index: 5;
 }
 .work-container {
   margin: auto;
